Cleaned up code and updated some dependencies.